--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
               5 простых (на самом деле не очень) советов
             </h3>
             <div class="block__lists">
-              <h3 class="block__title subtitle">Представьте небо и облака</h3>
-              <p class="block__content__advice">
+              <h4 class="block__title subtitle">Представьте небо и облака</h4>
+              <p class="block__content advice">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
                 помогает успокоиться. Ведь часто именно тревожные мысли о
                 сложных задачах как раз и мешают эти сложные задачи делать. В
@@ -163,15 +163,15 @@
                 денется. Это упражнение поможет вернуться в настоящий момент, а
                 не волноваться о потенциальных проблемах из будущего.
               </p>
-              <h3 class="block__title subtitle">Включите музыку</h3>
-              <p class="block__content__advice">
+              <h4 class="block__title subtitle">Включите музыку</h4>
+              <p class="block__content advice">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
                 Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
                 попробовать включить плейлист c «белым шумом» или нейромузыкой.
               </p>
-              <h3 class="block__title subtitle">Прогуляйтесь</h3>
-              <p class="block__content__advice">
+              <h4 class="block__title subtitle">Прогуляйтесь</h4>
+              <p class="block__content advice">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a
                   class="block-link"
@@ -186,16 +186,16 @@
                 работать. Но и простая двадцатиминутная прогулка — тоже отличный
                 вариант.
               </p>
-              <h3 class="block__title subtitle">Хорошо ешьте</h3>
-              <p class="block__content__advice">
+              <h4 class="block__title subtitle">Хорошо ешьте</h4>
+              <p class="block__content advice">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
                 высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
                 чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
                 пшеницы.
               </p>
-              <h3 class="block__title subtitle">Читайте</h3>
-              <p class="block__content__advice">
+              <h4 class="block__title subtitle">Читайте</h4>
+              <p class="block__content advice">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
                 даже секунд. А вот интересная книга способна затянуть и на
